--- a/TaskNest.Web/appsettings.json
+++ b/TaskNest.Web/appsettings.json
@@ -9,7 +9,7 @@
     "Password": "mytynkkfqwdtjqhg",
     "TLS": "true"
   },
-  "Roles": [ "User", "Admin" ],
+  "Roles": [ "Admin", "User" ],
   "AdminUsers": {
     "Emails": [ "Atel@abc.co.za", "Gil@abc.co.za" ],
     "Password": "Admin123!"
